--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.106",
+    "@types/node": "^9.6.1",
+    "@types/webpack": "^4.1.3",
+    "@types/webpack-dev-server": "^2.9.4",
+    "@types/webpack-merge": "^4.1.3",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
@@ -20,8 +25,8 @@
     "immutable": "^3.8.2",
     "jest": "^22.4.3",
     "js-cookie": "^2.2.0",
-    "less-loader": "^4.1.0",
     "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "node-sass": "^4.8.3",
@@ -31,8 +36,8 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "stylelint-config-standard": "^18.2.0",
     "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0",
     "ts-node": "^5.0.1",
     "typescript": "^2.8.1",
     "url-loader": "^1.0.1",
