--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/extract-text-webpack-plugin": "^3.0.2",
+    "@types/html-webpack-plugin": "^2.30.3",
     "@types/lodash": "^4.14.106",
     "@types/node": "^9.6.1",
     "@types/webpack": "^4.1.3",
@@ -16,6 +18,7 @@
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.11",
