--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/extract-text-webpack-plugin": "^3.0.2",
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/lodash": "^4.14.106",
+    "@types/moment": "^2.13.0",
     "@types/node": "^9.6.1",
+    "@types/ora": "^1.3.3",
+    "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
     "@types/webpack-dev-server": "^2.9.4",
     "@types/webpack-merge": "^4.1.3",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
