--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.106",
     "@types/moment": "^2.13.0",
     "@types/node": "^9.6.1",
+    "@types/opn": "^5.1.0",
     "@types/ora": "^1.3.3",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
@@ -27,7 +28,7 @@
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
     "immutable": "^3.8.2",
