--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,29 @@
 {
     "presets": [
         ["env", { "modules": false }],
+        "react",
         "stage-0"
     ],
     "env": {
         "test": {
-          "presets": [["env"], "stage-0"]
+          "presets": [["env"], "react", "stage-0"],
+          "plugins": [
+                "transform-decorators-legacy",
+                "syntax-dynamic-import",
+                ["import", {
+                    "libraryName": "antd",
+                    "style": true
+                }]
+            ]
         }
     },
     "plugins": [
         "transform-decorators-legacy",
-        "syntax-dynamic-import"
+        "syntax-dynamic-import",
+        ["import", {
+            "libraryName": "antd",
+            "libraryDirectory": "es",
+            "style": true
+        }]
     ]
 }
