--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "scripts": {
     "test": "jest",
     "clean": "rimraf ./dist/*.* ./dist/*",
+    "clean:dll": "rimraf ./lib/*.* ./lib/*",
     "start": "node ./config/webpack.local.js",
     "build": "npm run clean && node ./config/webpack.prod.js",
-    "dll": "webpack --mode production --config ./config/webpack.dll.js --progress --profile --bail",
+    "dll": "npm run clean:dll && webpack --mode production --config ./config/webpack.dll.js --progress --profile --bail",
     "lint": "eslint src & stylelint \"src/**/*.scss\"",
     "lint:fix": "eslint src --fix & stylefmt -r \"src/**/*.scss\"",
     "deploy": "node ./scripts/deploy.js"
