--- a/package.json
+++ b/package.json
@@ -74,8 +74,10 @@
     "opn": "^5.3.0",
     "ora": "^2.0.0",
     "postcss-loader": "^2.1.3",
+    "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-css-modules": "^4.7.2",
+    "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
