--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
     "@types/extract-text-webpack-plugin": "^3.0.2",
     "@types/html-webpack-plugin": "^2.30.3",
@@ -25,6 +26,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.11",
