--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.7.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
@@ -58,7 +59,9 @@
     "webpack-merge": "^4.1.2",
     "webpack-server": "^0.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-hot-loader": "^4.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./dist/*.* ./dist/*",
