--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@types/node": "^9.6.1",
     "@types/opn": "^5.1.0",
     "@types/ora": "^1.3.3",
+    "@types/react": "^16.3.17",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
+    "@types/react-router": "^4.0.26",
+    "@types/redux": "^3.6.0",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
     "@types/webpack-dev-server": "^2.9.4",
@@ -25,8 +30,10 @@
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-react-css-modules": "^3.4.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
@@ -37,6 +44,7 @@
     "immutable": "^3.8.2",
     "jest": "^22.4.3",
     "js-cookie": "^2.2.0",
+    "jsencrypt": "^2.3.1",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.5",
@@ -45,6 +53,11 @@
     "opn": "^5.3.0",
     "ora": "^2.0.0",
     "postcss-loader": "^2.1.3",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "redux": "^4.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
