--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/webpack": "^4.1.3",
     "@types/webpack-dev-server": "^2.9.4",
     "@types/webpack-merge": "^4.1.3",
+    "antd": "^3.6.1",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
