--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
     "@types/extract-text-webpack-plugin": "^3.0.2",
+    "@types/history": "^4.6.2",
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/lodash": "^4.14.106",
     "@types/moment": "^2.13.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.2",
     "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7",
     "@types/redux": "^3.6.0",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
@@ -41,6 +43,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^3.1.0",
     "immutable": "^3.8.2",
     "jest": "^22.4.3",
@@ -58,6 +61,7 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
