--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "babel-plugin-import": "^1.7.0",
     "babel-plugin-react-css-modules": "^3.4.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
@@ -68,6 +70,7 @@
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
+    "ts-loader": "^4.4.1",
     "ts-node": "^5.0.1",
     "typescript": "^2.9.1",
     "url-loader": "^1.0.1",
@@ -78,6 +81,7 @@
     "webpack-server": "^0.1.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "react-hot-loader": "^4.3.0"
   },
   "scripts": {
