--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
+    "ts-loader": "^4.4.1",
     "ts-node": "^5.0.1",
-    "typescript": "^2.8.1",
+    "typescript": "2.8.4",
     "url-loader": "^1.0.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
