--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
     "@types/extract-text-webpack-plugin": "^3.0.2",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.0",
     "@types/history": "^4.6.2",
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/lodash": "^4.14.106",
@@ -45,6 +46,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "fork-ts-checker-webpack-plugin": "^0.4.2",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.1.0",
     "immutable": "^3.8.2",
@@ -82,7 +84,8 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "react-hot-loader": "^4.3.0"
+    "react-hot-loader": "^4.3.0",
+    "source-map-loader": "^0.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
