--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-action": "^1.2.2",
     "redux-saga": "^0.16.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
