--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-action": "^1.2.4",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
     "@types/webpack-dev-server": "^2.9.4",
