--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/redux": "^3.6.0",
-    "@types/redux-action": "^1.2.4",
+    "@types/redux-actions": "^2.3.0",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "^4.1.3",
     "@types/webpack-dev-server": "^2.9.4",
@@ -68,7 +68,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-action": "^1.2.2",
+    "redux-actions": "^2.4.0",
     "redux-saga": "^0.16.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
