--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "webpack-server": "^0.1.2"
   },
   "devDependencies": {
+    "@types/jest": "^23.0.0",
     "@types/react-hot-loader": "^4.1.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.6",
@@ -93,7 +94,8 @@
     "react-hot-loader": "^4.3.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "source-map-loader": "^0.2.3"
+    "source-map-loader": "^0.2.3",
+    "ts-jest": "^22.4.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
