--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "webpack-merge": "^4.1.2",
     "webpack-server": "^0.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^23.0.0",
+    "ts-jest": "^22.4.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./dist/*.* ./dist/*",
