--- a/package.json
+++ b/package.json
@@ -7,6 +7,29 @@
     "lib": "lib",
     "test": "test"
   },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/__jest__/setupFile.ts"
+    ],
+    "transform": {
+      "^.+\\.(ts?|tsx?)$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "json"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.ts",
+      ".*\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.ts"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    }
+  },
   "dependencies": {
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
