--- a/package.json
+++ b/package.json
@@ -7,29 +7,6 @@
     "lib": "lib",
     "test": "test"
   },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/__jest__/setupFile.ts"
-    ],
-    "transform": {
-      "^.+\\.(ts?|tsx?)$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "json"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.ts",
-      ".*\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.ts"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "tsconfig.json"
-      }
-    }
-  },
   "dependencies": {
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
@@ -57,7 +34,6 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
     "immutable": "^3.8.2",
-    "jest": "^22.4.3",
     "js-cookie": "^2.2.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
@@ -83,11 +59,13 @@
     "webpack-server": "^0.1.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.0.0",
-    "ts-jest": "^22.4.6"
+    "@types/jest": "^20.0.8",
+    "babel-jest": "^20.0.3",
+    "jest": "^20.0.4",
+    "ts-jest": "^20.0.14"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "clean": "rimraf ./dist/*.* ./dist/*",
     "clean:lib": "rimraf ./lib/*.* ./lib/*",
     "build": "npm run clean && ts-node ./config/webpack.prod.ts",
