--- a/DockerFile
+++ b/DockerFile
@@ -4,4 +4,4 @@ ADD . /app
 WORKDIR /app
 RUN npm install --registry=https://registry.npm.taobao.org
 EXPOSE 9088
-CMD ts-node app/src/index.tsx
+CMD npm run build
