--- a/package.json
+++ b/package.json
@@ -85,17 +85,20 @@
     "webpack-server": "^0.1.2"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.11",
+    "@types/jest": "^20.0.8",
     "@types/react-hot-loader": "^4.1.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.6",
-    "@types/jest": "^20.0.8",
     "babel-core": "^6.26.3",
+    "babel-jest": "^20.0.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^20.0.4",
     "react-hot-loader": "^4.3.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "source-map-loader": "^0.2.3",
-    "babel-jest": "^20.0.3",
-    "jest": "^20.0.4",
     "ts-jest": "^20.0.14"
   },
   "scripts": {
