--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.11",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^20.0.8",
     "@types/react-hot-loader": "^4.1.0",
     "@types/redux-devtools-extension": "^2.13.2",
