--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/redux-logger": "^3.0.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^20.0.3",
+    "babel-polyfill": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^20.0.4",
