--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,11 @@
 ## 容器环境
-FROM node:8.9.4
-ADD . /app
-WORKDIR /app
-RUN npm install --registry=https://registry.npm.taobao.org
-EXPOSE 9088
-CMD npm run build
+# FROM node:8.9.4
+# ADD . /app
+# WORKDIR /app
+# RUN npm install --registry=https://registry.npm.taobao.org
+# EXPOSE 9088
+# CMD npm run build
+FROM nginx:latest
+COPY ./dist /usr/share/nginx/html
+EXPOSE 80
+# CMD nginx -g "daemon off"
