--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "opn": "^5.3.0",
     "ora": "^2.0.0",
     "postcss-loader": "^2.1.3",
+    "postcss-scss": "^1.0.6",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
