--- a/package.json
+++ b/package.json
@@ -60,21 +60,21 @@
     "rimraf": "^2.6.2",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-merge": "^4.1.2",
+    "autoprefixer": "^8.2.0",
+    "jest": "^22.4.3",
+    "less": "^3.0.1",
+    "node-sass": "^4.8.3"
   },
   "dependencies": {
-    "autoprefixer": "^8.2.0",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
     "immutable": "^3.8.2",
-    "jest": "^22.4.3",
     "js-cookie": "^2.2.0",
-    "less": "^3.0.1",
     "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "node-sass": "^4.8.3",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-merge": "^4.1.2"
+    "moment": "^2.21.0"
   }
 }
