--- a/package.json
+++ b/package.json
@@ -8,61 +8,61 @@
     "test": "test"
   },
   "dependencies": {
-    "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
-    "@types/extract-text-webpack-plugin": "^3.0.2",
-    "@types/html-webpack-plugin": "^2.30.3",
     "@types/lodash": "^4.14.106",
     "@types/moment": "^2.13.0",
     "@types/node": "^9.6.1",
+    "chalk": "^2.3.2",
+    "classnames": "^2.2.5",
+    "immutable": "^3.8.2",
+    "js-cookie": "^2.2.0",
+    "lodash": "^4.17.5",
+    "moment": "^2.21.0",
+    "ts-node": "^5.0.1",
+    "typescript": "2.8.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^20.0.8",
     "@types/opn": "^5.1.0",
     "@types/ora": "^1.3.3",
     "@types/rimraf": "^2.0.2",
-    "@types/webpack": "^4.1.3",
-    "@types/webpack-dev-server": "^2.9.4",
-    "@types/webpack-merge": "^4.1.3",
+    "@types/webpack": "4.1.3",
+    "@types/webpack-dev-server": "2.9.4",
+    "@types/webpack-merge": "4.1.3",
+    "@types/extract-text-webpack-plugin": "^3.0.2",
+    "@types/html-webpack-plugin": "^2.30.3",
+    "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "babel-jest": "^20.0.3",
+    "jest": "^20.0.4",
+    "ts-jest": "^20.0.14",
+    "ts-loader": "^4.4.1",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "chalk": "^2.3.2",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.1.0",
-    "immutable": "^3.8.2",
-    "js-cookie": "^2.2.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "node-sass": "^4.8.3",
     "opn": "^5.3.0",
     "ora": "^2.0.0",
     "postcss-loader": "^2.1.3",
+    "node-sass": "^4.8.3",
+    "url-loader": "^1.0.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
-    "ts-loader": "^4.4.1",
-    "ts-node": "^5.0.1",
-    "typescript": "2.8.4",
-    "url-loader": "^1.0.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2",
     "webpack-server": "^0.1.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^20.0.8",
-    "babel-jest": "^20.0.3",
-    "jest": "^20.0.4",
-    "ts-jest": "^20.0.14"
   },
   "scripts": {
     "test": "ts-node ./config/jest.ts",
