--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "test": "test"
   },
   "dependencies": {
-    "@types/chalk": "^2.2.0",
-    "@types/lodash": "^4.14.106",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^9.6.1",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
     "immutable": "^3.8.2",
@@ -30,6 +26,13 @@
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/lodash": "^4.14.106",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^9.6.1",
+    "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "@types/extract-text-webpack-plugin": "^3.0.2",
+    "@types/html-webpack-plugin": "^2.30.3",
     "@types/jest": "^20.0.8",
     "@types/opn": "^5.1.0",
     "@types/ora": "^1.3.3",
@@ -44,15 +47,9 @@
     "@types/webpack": "4.1.3",
     "@types/webpack-dev-server": "2.9.4",
     "@types/webpack-merge": "4.1.3",
-    "@types/extract-text-webpack-plugin": "^3.0.2",
-    "@types/html-webpack-plugin": "^2.30.3",
-    "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "babel-jest": "^20.0.3",
-    "jest": "^20.0.4",
-    "ts-jest": "^20.0.14",
-    "ts-loader": "^4.4.1",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.7.0",
     "babel-plugin-react-css-modules": "^3.4.2",
@@ -62,22 +59,26 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "fork-ts-checker-webpack-plugin": "^0.4.3",
+    "html-webpack-plugin": "^3.1.0",
+    "jest": "^20.0.4",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.8.3",
     "opn": "^5.3.0",
     "ora": "^2.0.0",
     "postcss-loader": "^2.1.3",
-    "node-sass": "^4.8.3",
-    "url-loader": "^1.0.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.1.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
+    "ts-jest": "^20.0.14",
+    "ts-loader": "^4.4.1",
+    "url-loader": "^1.0.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
