--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "test": "test"
   },
   "dependencies": {
+    "antd": "^3.7.0",
     "chalk": "^2.3.2",
     "classnames": "^2.2.5",
     "immutable": "^3.8.2",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
-    "ts-node": "^5.0.1",
-    "typescript": "2.8.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
@@ -23,7 +22,9 @@
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "ts-node": "^5.0.1",
+    "typescript": "2.8.4"
   },
   "devDependencies": {
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
@@ -39,11 +40,13 @@
     "@types/ora": "^1.3.3",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^5.0.20",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/redux": "^3.6.0",
     "@types/redux-actions": "^2.3.0",
+    "@types/redux-logger": "^3.0.6",
     "@types/rimraf": "^2.0.2",
     "@types/webpack": "4.1.3",
     "@types/webpack-dev-server": "2.9.4",
@@ -72,8 +75,12 @@
     "opn": "^5.3.0",
     "ora": "^2.0.0",
     "postcss-loader": "^2.1.3",
+    "react-hot-loader": "^4.3.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
