--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "- javascript\r - typescript\r - react + js\r - react + ts\r - vue + js\r - vue + ts",
   "main": "index.js",
+  "typings": "typings/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "test"
@@ -16,6 +17,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "react": "^16.4.0",
+    "react-css-modules": "^4.7.4",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -24,9 +26,10 @@
     "redux-actions": "^2.4.0",
     "redux-saga": "^0.16.0",
     "ts-node": "^5.0.1",
-    "typescript": "2.8.4"
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
+    "@types/react-css-modules": "^4.6.1",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
     "@types/extract-text-webpack-plugin": "^3.0.2",
@@ -56,7 +59,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.7.0",
-    "babel-plugin-react-css-modules": "^3.4.2",
+    "babel-plugin-react-cssreact-css-modules": "^3.4.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -86,6 +89,7 @@
     "stylelint-config-standard": "^18.2.0",
     "ts-jest": "^20.0.14",
     "ts-loader": "^4.4.1",
+    "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
