--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "typescript": "^2.9.2"
   },
   "devDependencies": {
-    "@types/react-css-modules": "^4.6.1",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
     "@types/extract-text-webpack-plugin": "^3.0.2",
@@ -42,6 +41,7 @@
     "@types/opn": "^5.1.0",
     "@types/ora": "^1.3.3",
     "@types/react": "^16.3.17",
+    "@types/react-css-modules": "^4.6.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^5.0.20",
@@ -59,6 +59,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-react-css-modules": "^3.4.2",
     "babel-plugin-react-cssreact-css-modules": "^3.4.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
