--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jest": "^20.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.8.3",
     "opn": "^5.3.0",
     "ora": "^2.0.0",
