--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
+    "ts-import-plugin": "^1.5.5",
     "ts-jest": "^20.0.14",
     "ts-loader": "^4.4.1",
     "typings-for-css-modules-loader": "^1.7.0",
