--- a/package.json
+++ b/package.json
@@ -57,13 +57,15 @@
     "@types/webpack-merge": "4.1.3",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^4.0.1",
+    "babel-core": "^6.26.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.4",
-    "babel-plugin-import": "^1.7.0",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-css-modules": "^3.4.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
