--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^20.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.8.3",
     "opn": "^5.3.0",
