--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "promise": "^8.0.2",
     "react": "^16.4.0",
     "react-css-modules": "^4.7.4",
     "react-dom": "^16.4.0",
