--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "clean:lib": "rimraf ./lib/*.* ./lib/*",
     "build": "npm run clean && ts-node ./config/webpack.prod.ts",
     "start": "node ./scripts/start.js",
-    "dll": "npm run clean:lib && ts-node ./config/webpack.dll.ts"
+    "dll": "npm run clean:lib && node ./scripts/dll.js"
   },
   "repository": {
     "type": "git",
