--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "ts-loader": "^4.4.1",
     "typescript": "^3.2.2",
     "typings-for-css-modules-loader": "^1.7.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
