--- a/template/.gitignore
+++ b/template/.gitignore
@@ -18,6 +18,14 @@
 
 npm-debug.log*
 package-lock.json
-yarn-lock.json
+yarn-lock
 yarn-debug.log*
 yarn-error.log*
+
+/lib
+/.settings
+/.project
+/.idea
+/debug.log
+/.vscode
+
