--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
+    "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.1.0",
     "jest": "^20.0.4",
     "less": "^3.0.1",
