--- a/package.json
+++ b/package.json
@@ -32,7 +32,20 @@
   },
   "homepage": "https://github.com/ouyangshan09/fore-end-starter#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-react-css-modules": "^5.2.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-babel": "^4.1.2",
@@ -40,42 +53,36 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "react-hot-loader": "^4.0.1",
-    "rimraf": "^2.6.2",
-    "stylelint": "^9.1.3",
-    "stylelint-config-standard": "^18.2.0",
-    "webpack-dev-server": "^3.1.1",
-    "autoprefixer": "^8.2.0",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
     "jest": "^22.4.3",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
-    "postcss-loader": "^2.1.3",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.11.0",
     "opn": "^5.3.0",
     "ora": "^2.0.0",
+    "postcss-loader": "^2.1.3",
+    "react-hot-loader": "^4.0.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.20.3",
+    "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
-    "webpack-merge": "^4.1.2",
-    "node-sass": "^4.8.3",
-    "html-webpack-plugin": "^3.1.0"
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "chalk": "^2.3.2",
+    "classnames": "^2.2.5",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-css-modules": "^4.7.2",
@@ -84,10 +91,6 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
-    "chalk": "^2.3.2",
-    "classnames": "^2.2.5",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0"
+    "redux": "^3.7.2"
   }
 }
